add model svm and update markdown linear, logistic

--- a/notebooks/linear_regression.ipynb
+++ b/notebooks/linear_regression.ipynb
@@ -62,21 +62,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26faf2c6",
-   "metadata": {},
-   "source": [
-    "Huấn luyện mô hình bằng gradient descent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a63cc15d",
    "metadata": {},
    "source": [
-    "B1: Đưa data vào hàm tuyến tính để dự đoán y\n",
-    "B2: Tính sai số giá trị thực tế và giá trị dự đoán (Dùng mean square error)\n",
-    "B3: Tính đạo hàm riêng (gradient) với tham số w và tham số b\n",
-    "B4: Cập nhật w và b mới bằng công thức W_t = W_t-1 - lr.dw\n",
+    "Huấn luyện mô hình bằng gradient descent<br>\n",
+    "B1: Đưa data vào hàm tuyến tính để dự đoán y<br>\n",
+    "B2: Tính sai số giá trị thực tế và giá trị dự đoán (Dùng mean square error)<br>\n",
+    "B3: Tính đạo hàm riêng (gradient) với tham số w và tham số b<br>\n",
+    "B4: Cập nhật w và b mới bằng công thức W_t = W_t-1 - lr.dw<br>\n",
     "Lặp lại quá trình"
    ]
   },
