--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -95,11 +95,11 @@
    "id": "42a4dce4",
    "metadata": {},
    "source": [
-    "B1: Tính z giống như công thức tính linear regression\n",
-    "B2: Đưa z qua hàm sigmoid để biểu diễn dữ liệu trong khoảng từ 0 đến 1 (dạng xác suất)\n",
-    "B3: Tính loss bằng cross entropy loss\n",
-    "B4: Tính đạo hàm riêng (gradient) với tham số w và b\n",
-    "B5: Cập nhật lại w và b bằng gradient\n",
+    "B1: Tính z giống như công thức tính linear regression<br>\n",
+    "B2: Đưa z qua hàm sigmoid để biểu diễn dữ liệu trong khoảng từ 0 đến 1 (dạng xác suất)<br>\n",
+    "B3: Tính loss bằng cross entropy loss<br>\n",
+    "B4: Tính đạo hàm riêng (gradient) với tham số w và b<br>\n",
+    "B5: Cập nhật lại w và b bằng gradient<br>\n",
     "Lặp lại 5 bước trên"
    ]
   },
@@ -150,7 +150,7 @@
    "id": "08c4f310",
    "metadata": {},
    "source": [
-    "Đặt ngưỡng nếu lớn hơn hoặc bằng 0.5 thì gán class 1, dưới 0.5 gán class 0\n",
+    "Đặt ngưỡng nếu lớn hơn hoặc bằng 0.5 thì gán class 1, dưới 0.5 gán class 0<br>\n",
     "Tiếp theo tính accuracy bằng công thức (TP + TN) / All"
    ]
   },
